# PIC32-Project-Template

./: LICENSE  README.md
TestFreeRTOS/: Makefile  compiler.mk  makefile_defs.mk
TestFreeRTOS/src/: FreeRTOSConfig.h  initialization.h  main.c
TestFreeRTOS/src/FreeRTOS/: CMakeLists.txt
TestProject/: Makefile  compiler.mk  makefile_defs.mk
TestProject-CMake/: CMakeLists.txt  initialization.c  initialization.h  main.c
TestProject-CMake/FreeRTOS/: CMakeLists.txt
TestProject-CMake/cmake-build/: CMakeCache.txt  Makefile  cmake_install.cmake  test.elf  test.map
TestProject-CMake/makefiles/: Makefile
TestProject-CMake/src/: CMakeLists.txt  delay.c  ex1.S  initialization.c  initialization.h  main.c
TestProject-CMake/src/FreeRTOS/: CMakeLists.txt
TestProject/src/: delay.h  initialization.c  main.c
